crates/uv-resolver/src/lock/snapshots/uv_resolver__lock__tests__missing_dependency_source_version_ambiguous.snap
---
source: crates/uv-resolver/src/lock/mod.rs
expression: result
---
Err(
    Error {
        inner: Error {
            inner: TomlError {
                message: "Dependency `a` has missing `version` field but has more than one matching package",
                raw: None,
                keys: [],
                span: None,
            },
        },
    },
)
